Modified title Hello me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Hello Spaces</title>
+		<title>Hello me</title>
 		<link rel="stylesheet" href="stylesheets/main.css">
 		<!--
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<p> 
-			Hey
+			I kind of understand what i'm doing .. 
 		</p>
 	</body>
 </html>
